# LEAP2

./: .gitignore  README.md  pyproject.toml
clients/c/: CMakeLists.txt  Makefile  README.md
clients/c/examples/: example.c  example.cpp
clients/c/include/: leap_client.h  leap_client.hpp
clients/c/src/: leap_client.c
clients/julia/: LEAPClient.jl  README.md
docs/: API.md  ARCHITECTURE.md  CLIENTS.md  EXPERIMENT_FORMAT.md  LAB_FORMAT.md  SCHEMA.md  TESTING.md  UI.md
experiments/default/: README.md
experiments/default/funcs/: open_funcs.py
experiments/default/ui/: call-log.html  dashboard.html
experiments/gradient-descent-2d/: README.md
experiments/graph-search/: README.md
experiments/monte-carlo/: README.md
experiments/quizlab/: README.md
experiments/quizlab/funcs/: quiz.py
experiments/quizlab/ui/: quiz.html
experiments/talk/: README.md
experiments/talk/funcs/: demo.py
experiments/talk/ui/: interact.html  live.html  slides.html
leap/: __init__.py  cli.py  config.py  main.py
leap/api/: admin.py  call.py  deps.py  experiments.py  logs.py
leap/client/: __init__.py  logclient.py  rpc.py
leap/core/: auth.py  experiment.py  rpc.py  storage.py
leap/middleware/: auth.py
leap/ui/: 404.html
leap/ui/landing/: index.html
leap/ui/shared/: admin-modal.js  adminclient.js  footer.js  functions.html  lab-info-modal.js  logclient.js  logs.html  readme.html  rpcclient.js  students.html  theme-toggle.js  theme.css
plans/: configurable-db-backend.md  custom-ui-themes.md  duckdb-performance-improvements.md  leaplive-registry.md
tests/: conftest.py
tests/api/: test_api.py  test_phase4.py  test_ui_serving.py
tests/cli/: test_cli_phase2.py  test_cli_phase3.py  test_cli_phase4.py  test_cli_phase5.py
tests/client/: test_logclient.py  test_rpcclient.py
tests/core/: test_auth.py  test_experiment.py  test_function_discovery.py  test_rpc.py  test_storage.py  test_withctx.py
tests/experiments/: test_graph_search.py
ui/: 404.html
ui/landing/: index.html
ui/login/: index.html
ui/shared/: admin-modal.js  adminclient.js  footer.js  functions.html  logs.html  navbar.js  readme.html  rpcclient.js  students.html  theme.css
(+1 files in other folders)
